Aug08: small details

--- a/res/Sections/TitlePage.tex
+++ b/res/Sections/TitlePage.tex
@@ -33,6 +33,7 @@
         \end{center}
             
         \large
+        \rule{0.7\linewidth}{0.5pt} \\
         CERN Summer Student Project Report \\
         \textit{August 09, 2024}
         \vspace{0.2cm}
