--- a/res/FeynmanDiagrams/s1r2FeynmanDiagram.tex
+++ b/res/FeynmanDiagrams/s1r2FeynmanDiagram.tex
@@ -14,7 +14,7 @@
             \vertex [below right=of b] (f2) {$S_1^{-1/3}$};
 
             \diagram* {
-                (i1) -- [anti fermion] (aa) [dot] -- [scalar] (f1),
+                (i1) -- [fermion] (aa) [dot] -- [scalar] (f1),
                 (i2) -- [fermion] (bb) [dot] -- [scalar] (f2),
                 (aa) -- [anti fermion, edge label=$\ell^+$] (bb)
             };
